// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: sidebar should write sidebar for exports' 1`] = `
"## typedoc-plugin-markdown

- [Home](../wiki/Home)
- [Exports](../wiki/Exports)

### Namespaces

- [namespaceA](../wiki/namespaceA)
- [namespaceB](../wiki/namespaceB)
"
`;

exports[`Theme: sidebar should write sidebar for modules' 1`] = `
"## typedoc-plugin-markdown


### Modules

- [breadcrumbs](../wiki/breadcrumbs)
- [theme](../wiki/theme)

### Namespaces

- [namespaceA](../wiki/theme.namespaceA)
- [namespaceB](../wiki/theme.namespaceB)
"
`;

exports[`Theme: url should getUrls with readme=none' 1`] = `
Array [
  "Home.md",
  "Home.md#declarationitema",
  "Home.md#declarationitemb",
  "Home.md#functionitema",
  "Home.md#functionitemb",
  "namespaceA.md",
  "namespaceA.SomeNestedClass.md",
  "namespaceA.SomeNestedClass.md#constructor",
  "namespaceB.md",
  "enumItemA.md",
  "enumItemB.md",
  "ClassItemA.md",
  "ClassItemA.md#constructor",
  "ClassItemB.md",
  "ClassItemB.md#constructor",
  "InterfaceItemA.md",
  "InterfaceItemA.md#prop",
  "InterfaceItemB.md",
  "InterfaceItemB.md#prop",
]
`;

exports[`Theme: url should getUrls' 1`] = `
Array [
  "Exports.md",
  "Exports.md#declarationitema",
  "Exports.md#declarationitemb",
  "Exports.md#functionitema",
  "Exports.md#functionitemb",
  "Home.md",
  "Exports.md#declarationitema",
  "Exports.md#declarationitemb",
  "Exports.md#functionitema",
  "Exports.md#functionitemb",
  "namespaceA.md",
  "namespaceA.SomeNestedClass.md",
  "namespaceA.SomeNestedClass.md#constructor",
  "namespaceB.md",
  "enumItemA.md",
  "enumItemB.md",
  "ClassItemA.md",
  "ClassItemA.md#constructor",
  "ClassItemB.md",
  "ClassItemB.md#constructor",
  "InterfaceItemA.md",
  "InterfaceItemA.md#prop",
  "InterfaceItemB.md",
  "InterfaceItemB.md#prop",
]
`;
